# api/openapi_agent.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.1
 info:
-  title: API lotto rich
+  title: API lotto rich for agent operation.
   description: "This is a sample API server of lotto rich"
   termsOfService: http://swagger.io/terms/
   contact:
@@ -13,16 +13,16 @@ externalDocs:
   description: Find out more about Swagger
   url: http://swagger.io
 servers:
-  - url: http://localhost:8080/v2
-    description: สำหรับ Production server (ไว้ Generate)
-  - url: http://localhost:61/v2
+  # - url: http://localhost:8080/v2
+  #   description: สำหรับ Production server (ไว้ Generate)
+  - url: http://localhost:62/v2
     description: สำหรับ Dev server (เครื่องตัวเอง Player)
-  - url: http://128.199.216.219:61/V2/
-    description: สำหรับ Test play server
-  - url: http://128.199.216.219:62/V2/
-    description: สำหรับ Test agent server
-  - url: http://128.199.216.219:63/V2/
-    description: สำหรับ Test owner server
+  # - url: http://128.199.216.219:61/V2/
+  #   description: สำหรับ Test play server
+  # - url: http://128.199.216.219:62/V2/
+  #   description: สำหรับ Test agent server
+  # - url: http://128.199.216.219:63/V2/
+  #   description: สำหรับ Test owner server
 tags:
   - name: agent
 paths:
@@ -30,7 +30,7 @@ paths:
     post:
       tags:
         - agent
-      summary: Logged agent user into system.
+      summary: Logged in agent user into system.
       operationId: loginAgent
       requestBody:
         description: for agent login
@@ -57,8 +57,15 @@ paths:
     post:
       tags:
         - agent
-      summary: Logs out current logged in user session.
+      summary: Loggged out current logged in user session.
       operationId: logoutAgent
+      requestBody:
+        description: token for clear session
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/requestWithToken"
+        required: true
       responses:
         "200":
           description: successful logout
@@ -66,6 +73,28 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/apiResponse"
+      x-swagger-router-controller: agentController
+  /agent/paymentRequest:
+    post:
+      tags:
+        - agent
+      summary: Agent payment request insert.
+      operationId: agentPaymentRequest
+      security:
+        - bearerAuth: []
+      requestBody:
+        description: Agent payment request insert data.
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/paymentRequestModel"
+        required: true
+      responses:
+        "200":
+          description: Insert Complete.
+        "405":
+          description: Invalid input
+          content: {}
       x-swagger-router-controller: agentController
   /agent/paymentRequestList/{agentId}:
     post:
@@ -96,26 +125,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/emptyResponse"
-      x-swagger-router-controller: agentController
-  /agent/paymentRequestInsert:
-    post:
-      tags:
-        - agent
-      summary: Agent payment request insert.
-      operationId: agentPaymentRequest
-      requestBody:
-        description: Agent payment request insert data.
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/paymentModel"
-        required: true
-      responses:
-        "200":
-          description: Insert Complete.
-        "405":
-          description: Invalid input
-          content: {}
       x-swagger-router-controller: agentController
   /agent/paymentDetail/{paymentId}:
     post:
@@ -169,117 +178,22 @@ paths:
           description: Id not found
           content: {}
       x-swagger-router-controller: agentController
-  /agent/agentWallet/{agentId}:
+  /agent/agentDetail:
     post:
       tags:
         - agent
-      summary: Finds agent wallet amount by agent id.
-      description: Finds agent wallet.
-      operationId: findAgentWalletById
-      parameters:
-        - name: agentId
-          in: path
-          description: Id of agent.
-          required: true
-          style: simple
-          explode: false
-          schema:
-            type: integer
-            format: int64
+      summary: Finds agent detail include wallet amount, sum player wallet.
+      description: Finds agent detail.
+      operationId: findAgentDetail
+      security:
+        - bearerAuth: []
       responses:
         "200":
           description: successful operation
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/agentWallet"
-                x-content-type: application/json
-        "400":
-          description: Invalid tag value
-          content: {}
-      x-swagger-router-controller: agentController
-  /agent/playerWallet/totalPlayer/{agentId}:
-    post:
-      tags:
-        - agent
-      summary: Finds sum of player wallet amount by agent id.
-      description: Finds sum player wallet amount.
-      operationId: findSumPlayerWalletAmountByAgentId
-      parameters:
-        - name: agentId
-          in: path
-          description: Id of agent.
-          required: true
-          style: simple
-          explode: false
-          schema:
-            type: integer
-            format: int64
-      responses:
-        "200":
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/totalPlayer"
-                x-content-type: application/json
-        "400":
-          description: Invalid tag value
-          content: {}
-      x-swagger-router-controller: agentController
-  /agent/playerWallet/totalCredit/{agentId}:
-    post:
-      tags:
-        - agent
-      summary: Finds sum of all player credit by agent id.
-      description: Finds sum of all player credit.
-      operationId: findSumPlayerCreditByAgentId
-      parameters:
-        - name: agentId
-          in: path
-          description: Id of agent.
-          required: true
-          style: simple
-          explode: false
-          schema:
-            type: integer
-            format: int64
-      responses:
-        "200":
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/totalCredit"
-                x-content-type: application/json
-        "400":
-          description: Invalid tag value
-          content: {}
-      x-swagger-router-controller: agentController
-  /agent/playerWallet/promotionCredit/{agentId}:
-    post:
-      tags:
-        - agent
-      summary: Finds sum of player promotions credit by agent id.
-      description: Finds sum player promotions credit.
-      operationId: findSumPlayerPromotionCreditByAgentId
-      parameters:
-        - name: agentId
-          in: path
-          description: Id of agent.
-          required: true
-          style: simple
-          explode: false
-          schema:
-            type: integer
-            format: int64
-      responses:
-        "200":
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/promotionCredit"
+                $ref: "#/components/schemas/agentDetail"
                 x-content-type: application/json
         "400":
           description: Invalid tag value
@@ -626,14 +540,16 @@ paths:
     post:
       tags:
         - agent
-      summary: Promotion create.
+      summary: Promotion create by agent.
       operationId: promotionCreate
+      security:
+        - bearerAuth: []
       requestBody:
         description: create new promotion by agent.
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/promotionModel"
+              $ref: "#/components/schemas/promotionCreateModel"
         required: true
       responses:
         "200":
@@ -711,7 +627,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/promotionModel"
+              $ref: "#/components/schemas/promotionCreateModel"
         required: true
       responses:
         "200":
@@ -731,7 +647,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/AgentRegisterRequest"
+              $ref: "#/components/schemas/agentRegisterRequest"
         required: true
       responses:
         "200":
@@ -818,31 +734,36 @@ components:
         password: "123456789"
         description: "This is description."
         status: 1
-    AgentRegisterRequest:
+    agentRegisterRequest:
       type: object
       properties:
-        name:
+        agentName:
           type: string
         username:
           type: string
         password:
           type: string
+        phoneNumber:
+          type: string
         email:
           type: string
         description:
           type: string
-        refCode:
+        agentRefCode:
           type: string
         status:
-          type: integer
+          type: string
       example:
-        name: "agentTest"
-        username: "agentTest"
-        password: "123456789"
-        email: test@test.com
-        description: "This is description."
-        refCode: "12345"
-        status: 0
+        {
+          agentName: "AgentXX",
+          email: "test@test.com",
+          phoneNumber: "0000000000",
+          username: "AgentXX",
+          password: "123456789",
+          description: "desc..",
+          agentRefCode: "",
+          status: "active",
+        }
     EmployeeModel:
       type: object
       properties:
@@ -876,6 +797,7 @@ components:
           type: string
         password:
           type: string
+      example: { username: "AgentXX", password: "123456789" }
     OwnerModel:
       type: object
       properties:
@@ -912,10 +834,16 @@ components:
           type: integer
           description: Manager type
           format: int32
-    agentWallet:
+    agentDetail:
       type: object
       properties:
-        amount:
+        amountCoin:
+          type: number
+        totalPlayer:
+          type: number
+        totalPlayerCredit:
+          type: number
+        totalPromotionnCredit:
           type: number
     playerWallet:
       type: object
@@ -953,38 +881,25 @@ components:
           type: number
       example:
         amount: 20000
-    paymentModel:
+    paymentRequestModel:
       type: object
       properties:
-        id:
-          type: integer
-          format: int64
         paymentType:
           type: string
         wayToPay:
           type: string
-        agentId:
-          type: integer
-          format: int64
         amount:
           type: number
         promotionId:
           type: integer
           format: int64
-        create_by:
-          type: integer
-          format: int64
-        create_datetime:
-          type: string
       example:
-        id: 0
-        paymentType: "0"
-        wayToPay: "2"
-        agentId: 6
-        amount: 10000
-        promotionId: 1
-        create_by: 10
-        create_datetime: "2008-03-09 16:05:07.123"
+        {
+          paymentType: "DP",
+          wayToPay: "T",
+          paymentAmount: 1000,
+          promotionId: 1,
+        }
     paymentDetailModel:
       type: object
       properties:
@@ -1201,15 +1116,12 @@ components:
       example:
         oldPassword: "123456789"
         newPassword: "987654321"
-    promotionModel:
+    promotionCreateModel:
       type: object
       properties:
-        id:
-          type: integer
-          format: int64
-        name:
+        promotionName:
           type: string
-        type:
+        promotionType:
           type: integer
           format: int64
         rateType:
@@ -1221,27 +1133,21 @@ components:
           type: string
         dateStop:
           type: string
-        status:
-          type: integer
-          format: int64
         description:
           type: string
-        create_by:
-          type: integer
-          format: int64
-        create_datetime:
+        status:
           type: string
       example:
-        id: 0
-        name: "Promotion 1"
-        type: 1
-        rateType: 1
-        rateAmount: 10
-        dateStart: "2008-03-09 16:05:07.123"
-        dateStop: "2008-03-09 16:05:07.123"
-        description: "Description"
-        create_by: 9
-        create_datetime: "2008-03-09 16:05:07.123"
+        {
+          promotionName: "Prmotion 1",
+          promotionType: "ฟรีเครดิต",
+          rateType: "fixed",
+          rateAmount: 500,
+          dateStart: "2008-03-09 16:05:07.123",
+          dateStop: "2008-4-09 16:05:07.123",
+          description: "",
+          status: "active",
+        }
     promotionListModel:
       type: object
       properties:
@@ -1305,6 +1211,13 @@ components:
         dateStart: "2008-03-09 16:05:07.123"
         dateStop: "2008-03-09 16:05:07.123"
         description: "Description"
+    requestWithToken:
+      type: object
+      properties:
+        token:
+          type: string
+      example:
+        token: yourExampleToken
   securitySchemes:
     bearerAuth: # arbitrary name for the security scheme
       type: http
